<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        app:layoutDescription="@xml/onborading_scene">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/app_icon_foreground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_view_first"
            style="@style/TextView.Header"
            android:text="@string/title_on_boarding_first_slide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle_view_first"
            style="@style/TextView.Light"
            android:gravity="center"
            android:text="@string/description_on_boarding_first_slide" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppLogo2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/koltin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_view_second"
            style="@style/TextView.Medium"
            android:text="@string/title_on_boarding_second_slide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle_view_second"
            style="@style/TextView.Light"
            android:gravity="center"
            android:text="@string/description_on_boarding_second_slide" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppLogo3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/app_icon_foreground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_view_third"
            style="@style/TextView.Medium"
            android:gravity="center"
            android:text="@string/title_on_boarding_third_slide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle_view_third"
            style="@style/TextView.Light"
            android:gravity="center"
            android:text="@string/description_on_boarding_third_slide" />

        <View
            android:id="@+id/indicator_view_first"
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="@dimen/spacing_medium"
            android:background="@drawable/background_indicator_disabled" />

        <View
            android:id="@+id/indicator_view_second"
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="@dimen/spacing_medium"
            android:background="@drawable/background_indicator_disabled" />

        <View
            android:id="@+id/indicator_view_third"
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="@dimen/spacing_medium"
            android:background="@drawable/background_indicator_disabled" />

        <View
            android:id="@+id/indicator_view_active"
            android:layout_width="@dimen/spacing_medium"
            android:background="@drawable/background_indicator_enabled"
            android:layout_height="@dimen/spacing_medium"/>

        <Button
            android:id="@+id/button_get_started"
            style="@style/ButtonSolid"
            android:text="@string/title_button_get_started" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>